2006-02-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* sample/heat-properties.dai: New file.
	* sample/Makefile (SETUPS): Added.

	* parser_file.C (get_string): Support '\t' escape.

	* number_soil.C (soil_heat_capacity, soil_heat_conductivity): New
	models.

2006-02-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* weather_std.C (TempScale, TempOffset): New parameters.

2006-02-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.00 released.

2006-01-31  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_expr.C (load): Fix logic error.

2006-01-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* boolean.C (BooleanOrSyntax): Typo.

2006-01-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C, source_file.h (handle): New parameter.

2006-01-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* treelog.C (warning, error): Suffix message.

2006-01-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* treelog.C (error, warning): Prefix message.

2006-01-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* integer.C, integer.h: New component.
	* Makefile (COMPONENTS): Add it.
	* integer_arit.C: New model.
	* Makefile (MODELS): Add it.

2006-01-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select_content.C: Use linear interpolation between node points.

2005-12-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* crop_std.C (tick): Check that CAI is larger than 0 before
	calculating assimilate production by photosynthesis.  Needed to
	make the code survive a cut that leaves no CAI.

2005-12-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* number_source.C (source_average): New model.

2005-12-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.99 released.

2005-12-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_merge.C: New model.
	* Makefile (MODELS): Added it.

	* xysource_merge.C (load): Fix bug that prevented inheriting 'with'.  

2005-12-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* stringer.C (const): New model.

2005-12-07  Per Abrahamsen  <abraham@dina.kvl.dk>
